Changes in 1.1.19:
  o Client Changes:
    * A new "cvc promote" command has been added. "cvc promote" is a
      special type of cloning based on group structure.  For more
      information on promote, see the JIRA issue until documentation
      on the wiki is updated.  (CNY-1304)
    * An "--all-flavors" option has been added to "cvc promote" which
      promotes all flavors of the latest version of the listed
      troves. (CNY-1440)
    * A programmatic interface for performing partial clones, where
      only some components out of a package are cloned based on
      byDefault settings, has been added. (CNY-1389)
    * Conary changesets can now deal with changesets that contain
      package components that share identical file contents, pathId,
      and fileId combinations. (CNY-1253)
    * The "proxy" configuration parameter will now work for standard
      http proxies such as Squid.  Previously the "proxy"
      configuration parameter could only specify a Conary repository
      proxy.  Environments that require all HTTP and HTTPS traffic
      pass through a proxy must continue to use they "http_proxy"
      environment variable, as the "proxy" configuration variable is
      only used for Conary repository calls.  Source downloads in cvc,
      for example, will only use the http_proxy environment variable.
    * Due to limitations in Apache 2.0, the Conary client will now use
      HTTP/1.1 "chunked" Transfer-encoding when committing changesets
      larger than 2 GiB. (CNY-1478)
    * An "applyRollback()" method has been added to the ConaryClient
      class. (CNY-1455)

  o Server Changes:
    * The repository cache has been completely reworked. This fixes
      problems with authorization and the cache, and has the side
      benefit of unifying the proxy code for the repository and the
      proxy. The cacheDB repository configuration parameter is
      obsolete and will cause a warning on startup. changesetCacheDir