@@ -1,3 +1,10 @@
+Changes in @NEW@:
+  o Build Changes:
+    * When Conary calls an external program (python, perl, monodis)
+      to determine file dependencies and that program is not a part
+      of the package being built, it will warn if that external
+      program is not provided by the build requirements. (CNY-1492)
+
 Changes in 1.1.19:
   o Client Changes:
     * A new "cvc promote" command has been added. "cvc promote" is a
